app/src/test/resources/programs/valid/blocks/max.exe
foo main() -> Int = {
    let mut a: Int;
    let mut b: Int;
    /**/
    let max: Int = {
        if(a>b) then {
            a
        } else {
            b
        }
    };
    0
}
