app/src/test/resources/programs/invalid/foonctions/badArgumentType.exe
foo g(a: Int, b: Int) -> Int = a + b;

foo main() -> Int = {
    g((), b = true)
}
